[6.8.1]
 * make Response implements Closeable (thanks to https://github.com/omaric)
 * fix Type resolution for builder pattern in ServiceBuilderOAuth10a (thanks to https://github.com/mgyucht)
 * fix no Content-length errors (thanks to https://github.com/mikita-herasiutsin and https://github.com/iankurverma)

[6.8.0]
 * Add debug output to OAuth2Service (thanks to https://github.com/rbarbey)
 * Add Dropbox API (https://www.dropbox.com/) (thanks to https://github.com/petrkopotev)

[6.7.0]
 * Add OAuth2 support for Meetup.com (thanks to https://github.com/stevedes77)
 * upgrade okhttp to 4.0.1 and security fix for jackson-databind 2.9.9.1

[6.6.3]
 * fix NPE for OpenId providers

[6.6.2]
 * add PMD checks on compile
 * add all OAuth error codes from supported RFCs (incl. "invalid_token") (thanks to https://github.com/echorebel)
 * Update LinkedIn Example to API v2 (thanks to https://github.com/peternees)
 * switch to jackson dependency to parse json responses (thanks to https://github.com/galimru)

[6.5.1]
 * cleanup deprecates methods

[6.5.0]
 * separate OAuth1.0a and OAuth2.0 ServiceBuilders,
   introduce AuthorizationUrlBuilder (along with deprecation of AuthorizationUrlWithPKCE)
   add possibility to provide different scopes for each Access Token request
 * upgrade Facebook API from v2.11 to v3.2
 * upgrade VkontakteApi from 5.73 to 5.92

[6.4.1]
 * support TLS 1.3 in JDK 11 for Salesforce
 * fix NPE in Apache HTTP client in case of empty body in HTTP response (e.g. with 204 response code) (thanks to https://github.com/SainagNeelamPatnaik)
 * separate OAuth1.0a and OAuth2.0 classes

[6.3.0]
 * fix Muplipart request model and implement it for a jdk HTTP client (thanks to https://github.com/NTPape)
 * remove any Google+ mention (switch to clean Google OAuth2) (thanks to https://github.com/fvasco)
 * fix Microsoft Azure AD v1.0 and v2.0 (thanks to https://github.com/kenpusney and https://github.com/oscararias)