@@ -1,3 +1,6 @@
+[SNAPSHOT]
+ * Add Xero API (https://www.xero.com/) (thanks to https://github.com/SidneyAllen)
+
 [6.8.1]
  * make Response implements Closeable (thanks to https://github.com/omaric)
  * fix Type resolution for builder pattern in ServiceBuilderOAuth10a (thanks to https://github.com/mgyucht)
